--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Rosie Odenkirk</title>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <meta name="viewport" content="width=device-width, initial-scale-1">
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("user_vanqZMkpPOADQP2iEpqKS");
+            emailjs.send("gmail", "rosie", {
+                name: "Aaron",
+                notes: "The project that I want is..."
+            })
+        })();
+    </script>
 </head>
 
 <body>
@@ -47,46 +60,45 @@
             </div>
         </div>
     </header>
-    <section class="container-fluid ">
+    <section class="container-fluid">
         <div class="row bg-color-contact">
             <div>
                 <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
                 <h5 class="uppercase text-center">Let's work together</h5>
             </div>
             <div class="center-form">
-                <form>
-                    <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
-                    <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
-                    <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
-                    <button type="submit" class="btn btn-secondary center-block">Send Project Request</button>
+                <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
+                <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
+                <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
+                <button type="submit" class="btn btn-secondary center-block">Send Project Request</button>
                 </form>
             </div>
         </div>
     </section>
-    <footer class="container-fluid ">
-        <div id="footer-details " class="row ">
-            <div class="col-sm-4 ">
-                <h5 class="uppercase general-sub ">About</h5>
-                <p class="inline-block ">
+    <footer class="container-fluid">
+        <div id="footer-details" class="row">
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">About</h5>
+                <p class="inline-block">
                     Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
                 </p>
             </div>
-            <div class="col-sm-4 ">
-                <h5 class="uppercase general-sub ">Download My CV</h5>
-                <p class="inline-block ">
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Download My CV</h5>
+                <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf "><i class="fa fa-download " aria-hidden="true "></i></a>
+                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf"><i class="fa fa-download" aria-hidden="true"></i></a>
                 </p>
             </div>
-            <div class="col-sm-4 ">
-                <h5 class="uppercase general-sub ">MySocial</h5>
-                <ul class="list-inline social-links ">
-                    <li><a target="_blank " href="# "><i class="fa fa-facebook "></i></a></li>
-                    <li><a target="_blank " href="# "><i class="fa fa-twitter "></i></a></li>
-                    <li><a target="_blank " href="# "><i class="fa fa-linkedin "></i></a></li>
-                    <li><a target="_blank " href="# "><i class="fa fa-pinterest "></i></a></li>
-                    <li><a target="_blank " href="# "><i class="fa fa-instagram "></i></a></li>
-                    <li><a target="_blank " href="# "><i class="fa fa-youtube "></i></a></li>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">MySocial</h5>
+                <ul class="list-inline social-links">
+                    <li><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a target="_blank" href="#"><i class="fa fa-pinterest"></i></a></li>
+                    <li><a target="_blank" href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li><a target="_blank" href="#"><i class="fa fa-youtube"></i></a></li>
                 </ul>
             </div>
         </div>
